unpackaged/main/default/objects/adroll__User_Summary__c/adroll__User_Summary__c.object-meta.xml
<CustomObject>
    <label>RollWorks User Summary</label>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks User Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>