unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__ClickConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ClickConversion__c</fullName>
    <label>CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>