unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__Contact__c.field-meta.xml
<CustomField>
    <fullName>adroll__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RollWorks Contact Summary</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RollWorks User Summary</relationshipLabel>
    <relationshipName>RollWorks_User_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>