unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__Email__c.field-meta.xml
<CustomField>
    <fullName>adroll__Email__c</fullName>
    <description>Email Address for the Tracking Data</description>
    <inlineHelpText>Email Address of the Tracking Data</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>