unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__Impression_Costs__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impression_Costs__c</fullName>
    <label>Impression Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>