unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__Impressions__c.field-meta.xml
<CustomField>
    <fullName>adroll__Impressions__c</fullName>
    <label>Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>