unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__Lead__c.field-meta.xml
<CustomField>
    <fullName>adroll__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RollWorks Lead Summary</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>RollWorks User Summary</relationshipLabel>
    <relationshipName>RollWorks_User_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>