unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__Look_Back_Days__c.field-meta.xml
<CustomField>
    <fullName>adroll__Look_Back_Days__c</fullName>
    <formula>$Setup.adroll__AdRollABMSettings__c.adroll__TrackingDataTimeFrame__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Look Back Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>