unpackaged/main/default/objects/adroll__User_Summary__c/fields/adroll__ViewConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ViewConversion__c</fullName>
    <label>VTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>